K8S/keycloak/ingress-test.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  namespace: "testing"
  name: "keycloak"
  annotations:
    cert-manager.io/issuer: "keycloak"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: "nginx"
  tls:
    - secretName: "keycloak-ingress-cert"
      hosts: ["access.k3s"]
  rules:
    - host: "access.k3s"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "keycloak"
                port:
                  number: 8080
